--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -23,11 +23,11 @@
 	-moz-osx-font-smoothing: grayscale;
 
 	// default icon color
-	color: @inactive-button;
+	color: @enabled-link;
 }
 
 [class^="icon-"]:active {
-	color: @pressed-button;
+	color: @pressed-link;
 }
 
 .icon-menu:before {
