--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -35,10 +35,10 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
   text-decoration: none;
-  color: @link-color;
+  color: @enabled-link;
 }
 a:active {
-  color: @pressed-button;
+  color: @pressed-link;
 }
 
 // LISTS
