--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -42,6 +42,8 @@
 @inactive-link: lighten(@enabled-link, 20%);
 
 @highlighted: #0f82fe;
+@highlighted-pressed: #00baff;
+
 @enabled-button: #b0b0b6;
 @inactive-button: lighten(@enabled-button, 20%);
 @active-button: #0f82fe;
