Renamed to accordion-item to accordion-title to better reflect future use

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -133,15 +133,15 @@ button.enabled-button{
   }
 }
 
-// When item open, show top&bottom borders
-.accordion-item-active {
+// When title open, show top&bottom borders
+.accordion-title-active {
   border-top-style: solid;
   border-bottom-style: solid;
   border-width: 1px;
   border-color: @separator;
   padding-top: 5px;
   padding-bottom: 5px;
-  .accordion-item-open {
+  .accordion-title-open {
     margin-top: -5px;
     padding-bottom: 5px;
     .left-input-wrapper {
