Working accordion without transclude using ng-if

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -133,8 +133,8 @@ button.enabled-button{
   }
 }
 
-// When title open, show top&bottom borders
-.accordion-title-active {
+// When item is active, show top&bottom borders
+.accordion-item-active {
   border-top-style: solid;
   border-bottom-style: solid;
   border-width: 1px;
