--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -278,6 +278,7 @@ input[type="checkbox"] + label.overdue:before {
 
 input[type="checkbox"]:checked + label:before {
   .icon-selection-checked;
+  color: @highlighted;
 }
 
 // SELECTIONS
