header color set to @highlighted, created new color: @instruction

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -35,6 +35,7 @@
 @logo: #3b3b3b;
 @separator: #dadada;
 @inactive-text: #919191;
+@instruction: #37c331;
 
 @active-link: black;
 @enabled-link: #919191;
