footer selected item color set to @highlighted

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -359,7 +359,7 @@ select {
 
 a[class^='active-slide'],a[class*=' active-slide']{
   span {
-    color: @active-link;
+    color: @highlighted;
   }
 }
 
