datebar color change

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -124,6 +124,9 @@ section#tasks-dates {
   .inner-slide-content-container{
     padding-bottom: @footer-height;
   }
+  #datebar {
+    color: @highlighted;
+  }
 }
 
 // TODO: Move these to the right place!
