Revert "Merge remote-tracking branch 'extendedmind/lists' into lists"
This reverts commit b751a135696826638c0233cb81687c7f0b924b37, reversing
changes made to 4770c9c035c088e50491b7f10c7ef877e9e0fc0b.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -278,7 +278,6 @@ input[type="checkbox"] + label.overdue:before {
 
 input[type="checkbox"]:checked + label:before {
   .icon-selection-checked;
-  color: @highlighted;
 }
 
 // SELECTIONS
@@ -359,7 +358,7 @@ select {
 
 a[class^='active-slide'],a[class*=' active-slide']{
   span {
-    color: @highlighted;
+    color: @active-link;
   }
 }
 
