omnibar width update

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -92,6 +92,8 @@ section#home {
         .top-bottom-borders;
         display: table;
         width: 100%;
+        padding-left: 10px;
++       padding-right: 10px;
 
         div.right-button-wrapper { 
           line-height: 100%;
