datebar color change

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -93,7 +93,7 @@ section#home {
         display: table;
         width: 100%;
         padding-left: 10px;
-+       padding-right: 10px;
+        padding-right: 10px;
 
         div.right-button-wrapper { 
           line-height: 100%;
@@ -124,6 +124,10 @@ section#tasks-dates {
   .inner-slide-content-container{
     padding-bottom: @footer-height;
   }
+  #datebar {
+    color: @highlighted;
+  }
+
 }
 
 // TODO: Move these to the right place!
