highlighted-pressed tweak

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -43,7 +43,7 @@
 @inactive-link: lighten(@enabled-link, 20%);
 
 @highlighted: #0f82fe;
-@highlighted-pressed: #00baff;
+@highlighted-pressed: darken(@highlighted, 20%);
 
 @enabled-button: #b0b0b6;
 @inactive-button: lighten(@enabled-button, 20%);
