--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -23,7 +23,7 @@
 	-moz-osx-font-smoothing: grayscale;
 
 	// default icon color
-	color: @enabled-link;
+	color: @active-link;
 }
 
 [class^="icon-"]:active {
