--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -37,10 +37,9 @@
 @inactive-text: #919191;
 @instruction: #37c331;
 
-@active-link: black;
-@enabled-link: #919191;
-@pressed-link: darken(@enabled-link, 20%);
-@inactive-link: lighten(@enabled-link, 20%);
+@active-link: #919191;
+@pressed-link: darken(@active-link, 20%);
+@inactive-link: lighten(@active-link, 20%);
 
 @highlighted: #0f82fe;
 @highlighted-pressed: darken(@highlighted, 20%);
