--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -34,12 +34,10 @@
 // Colors
 @logo: #3b3b3b;
 @separator: #dadada;
-@inactive-text: #919191;
 @instruction: #37c331;
 
-@active-link: #919191;
-@pressed-link: darken(@active-link, 20%);
-@inactive-link: lighten(@active-link, 20%);
+@inactive-element: #919191;
+@active-element: darken(@inactive-element, 20%);
 
 @highlighted: #0f82fe;
 @highlighted-pressed: darken(@highlighted, 20%);
