--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -52,7 +52,7 @@ section#home {
         color: @inactive-element;
       }
       a.collective:active{
-        color: @pressed-link;
+        color: @active-element;
       }
     }
     nav {
