Moved footer up a bit

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -131,6 +131,9 @@ footer {
   .center-horizontally;
   max-width: @two-column-grid-width;
   background-color: white;
+  nav {
+    padding-top: 5px;
+  }
   li {
     text-align: center;
   }
