Started implementing new version of datepicker/datebar: DateService refactoring, new HTML layout.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -118,7 +118,6 @@ section#tasks-dates {
   #datebar {
     color: @highlighted-element;
   }
-
 }
 
 // TODO: Move these to the right place!
@@ -162,4 +161,7 @@ div#accordionTitleHeightFix {
 a#accordionTitleLink {
   color: @default-element;
   line-height: 19px;
+}
+#datepicker {
+  height: @datepicker-height;
 }
