--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -1,6 +1,7 @@
 // Baseline
 @horizontal-grid: 30px;
 @vertical-grid: 44px;
+@vertical-grid-half: 19px;
 
 // icons
 @icon-size: 28px;
@@ -30,6 +31,9 @@
 
 // Footer
 @footer-height: 60px;
+
+// Date picker
+@datepicker-height: 60px;
 
 // Colors
 @logo: #3b3b3b;
