--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -51,17 +51,13 @@ ul {
 
 // INPUTS
 
-input {
+input, select, textarea {
   width: 100%;
 }
 
 button {
   padding: 0;
   margin: 0;
-}
-
-textarea {
-  width: 100%;  
 }
 
 // FONTS
