--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -23,11 +23,11 @@
 	-moz-osx-font-smoothing: grayscale;
 
 	// default icon color
-	color: @inactive-element;
+	color: @default-element;
 }
 
 [class^="icon-"]:active {
-	color: @active-element;
+	color: @default-element-pressed;
 }
 
 .icon-menu:before {
