--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -221,7 +221,7 @@ button.normal-button {
     background-color: @default-button-pressed;
   }
   &[disabled] {
-    background-color: @inactive-button;
+    background-color: @default-button-disabled;
   }
 }
 
@@ -242,7 +242,7 @@ button.delete-button {
     background-color: @delete-button;
   }
   &:active {
-    background-color: @pressed-delete-button;
+    background-color: @delete-button-pressed;
   }
 }
 
