--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -43,30 +43,16 @@
 
 @default-button: #b0b0b6;
 @default-button-pressed: #00baff;
-@inactive-button: lighten(@default-button, 20%);
+@default-button-disabled: lighten(@default-button, 20%);
 
 @highlighted-button: #0f82fe;
 @cancel-button: #7e7e7e;
 @cancel-button-pressed: lighten(@cancel-button, 20%);
 @delete-button: #e22c09;
-@pressed-delete-button: lighten(@delete-button, 20%);
+@delete-button-pressed: lighten(@delete-button, 20%);
 @overdue-task: @delete-button;
 
 // Components
 @plus-button-width: 27px;
 @fade-time: 0.2s;
 @icon-button-width: @plus-button-width;
-
-/* MIKÄ TÄÄ ON?
-@page-padding: 15px;
-@active-color: #428bca;
-@inactive-color: #c6dcef; 
-@em-lightblue: #7aadd9;
-@blue-disabled: #c6dcef;
-@completed: #AFAFAF;
-@gray: #8E8E93;
-@darkgray: #B6BBBA;
-@red: #E22C09;
-@green: #4ECE3A;
-@black: #333;
-*/
