--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -344,6 +344,16 @@ select {
   }
 }
 
+// Fix lineheight of multirow items
+.single-lineheight {
+  table {
+    max-width: 100%;
+    td {
+      padding-right: 0.5em;
+    }
+  }
+}
+
 // FORMS
 
 .form-group, .input-group {
