--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -344,7 +344,7 @@ select {
   }
 }
 
-// Fix lineheight of multirow items
+// Multirow item indent fixed
 .single-lineheight {
   table {
     max-width: 100%;
