--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -118,6 +118,7 @@
   span.link-title {
     width: 100%;
     display: table-cell;
+    line-height: normal;
   }
   span.slide-indicator { 
     display: table-cell;
