'@enabled-button' and '@inactive-element' LESS variables missing. Changed color to white for now.'

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -250,7 +250,7 @@ button.delete-button {
 button.enabled-button{
   color: white;
   & {
-    background-color: @enabled-button;
+    background-color: white;
   }
 }
 
