--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -19,7 +19,7 @@
 }
 
 input[type="checkbox"]:checked ~ a#accordionTitleLink {
-  color: @inactive-element;
+  color: white;
   .fade-color(@fade-time);
 }
 
@@ -28,7 +28,7 @@ div#accordionTitleHeightFix {
 }
 
 a#accordionTitleLink {
-  color: @inactive-element;
+  color: white;
   line-height: @vertical-grid-half;
 }
 
