menu icon updated

--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -30,47 +30,47 @@
 	color: @default-element-pressed;
 }
 
-.icon-menu:before {
+.icon-selection-empty:before {
 	content: "\e600";
 }
-.icon-selection-empty {
+.icon-selection-checked:before {
 	content: "\e601";
 }
-.icon-selection-checked {
+.icon-plus:before {
 	content: "\e602";
 }
-.icon-plus:before {
+.icon-i:before {
 	content: "\e603";
 }
-.icon-i:before {
+.icon-home:before {
 	content: "\e604";
 }
-.icon-home:before {
-	content: "\e605";
-}
-.icon-arrow-left:before {
-	content: "\e60c";
-	font-size: @slide-indicator-width;
-}
 .icon-arrow-right:before {
-	content: "\e606";
+	content: "\e605";
 	font-size: @slide-indicator-width;
 }
 .icon-tasks:before {
-	content: "\e607";
+	content: "\e606";
 }
 .icon-notes:before {
-	content: "\e608";
+	content: "\e607";
 }
 .icon-inbox:before {
+	content: "\e608";
+}
+.icon-logo_with_text:before {
 	content: "\e609";
+	color: @logo;
+	font-size: @banner-logo-size;
 }
 .icon-logo_only:before {
 	content: "\e60a";
 	color: @logo;
 }
-.icon-logo_with_text:before {
+.icon-arrow-left:before {
 	content: "\e60b";
-	font-size: @banner-logo-size;
-	color: @logo;
+	font-size: @slide-indicator-width;
+}
+.icon-menu:before {
+	content: "\e60c";
 }
