icon pack bug fix

--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -30,10 +30,10 @@
 	color: @default-element-pressed;
 }
 
-.icon-selection-empty:before {
+.icon-selection-empty {
 	content: "\e600";
 }
-.icon-selection-checked:before {
+.icon-selection-checked {
 	content: "\e601";
 }
 .icon-plus:before {
