inbox user content now black

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -150,7 +150,7 @@ button.default-button{
 }
 
 input[type="checkbox"]:checked ~ a#accordionTitleLink {
-  color:@default-element;
+  color:@content;
   .fade-color(@fade-time);
 }
 
@@ -159,7 +159,7 @@ div#accordionTitleHeightFix {
 }
 
 a#accordionTitleLink {
-  color: @default-element;
+  color: @content;
   line-height: 19px;
 }
 #datepicker {
