menu content text now black

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -119,6 +119,7 @@
     width: 100%;
     display: table-cell;
     line-height: normal;
+    color: @content;
   }
   span.slide-indicator { 
     display: table-cell;
