--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -150,7 +150,7 @@ button.default-button{
 }
 
 input[type="checkbox"]:checked ~ a#accordionTitleLink {
-  color:@content;
+  color:@default-element;
   .fade-color(@fade-time);
 }
 
