wrong password notification updated

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -61,3 +61,6 @@
 @plus-button-width: 27px;
 @fade-time: 0.2s;
 @icon-button-width: @plus-button-width;
+
+@danger-background: @delete-button;
+@danger-text: white;
