--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -428,3 +428,10 @@ span.icon-i:active, span.icon-plus:active {
   border-width: 16px;
   margin-left: -16px;
 }
+
+.danger {
+  .wide-button;
+  background-color: @danger-background;
+  color: @danger-text;
+  text-align: center;
+}
