arrow-box is now onboarding-bubble

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -395,7 +395,7 @@ span.icon-i:active, span.icon-plus:active {
 }
 */
 
-.arrow-box {
+.onboarding-bubble {
   margin-top: 40px;
   position: relative;
   border: 1px solid @separator;
@@ -405,7 +405,7 @@ span.icon-i:active, span.icon-plus:active {
   line-height: normal;
   color: @default-element;
 }
-.arrow-box:after, .arrow-box:before {
+.onboarding-bubble:after, .onboarding-bubble:before {
   bottom: 100%;
   left: 50%;
   border: solid transparent;
@@ -416,13 +416,13 @@ span.icon-i:active, span.icon-plus:active {
   pointer-events: none;
 }
 
-.arrow-box:after {
+.onboarding-bubble:after {
   border-color: rgba(255, 255, 255, 0);
   border-bottom-color: white;
   border-width: 15px;
   margin-left: -15px;
 }
-.arrow-box:before {
+.onboarding-bubble:before {
   border-color: rgba(255, 255, 255, 0);
   border-bottom-color: @separator;
   border-width: 16px;
