--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -39,7 +39,7 @@
 @content: black;
 @logo: #3b3b3b;
 @separator: #dadada;
-@instruction: #37c331;
+@instruction: #37c331; // #70c041
 
 @default-element: #919191;
 @default-element-pressed: darken(@default-element, 20%);
