omnibar onboarding bubble color change

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -403,8 +403,11 @@ span.icon-i:active, span.icon-plus:active {
   padding: 20px 10px;
   text-align: center;
   line-height: normal;
-  color: @default-element;
+  span {
+    color: @instruction;
+  }
 }
+
 .onboarding-bubble:after, .onboarding-bubble:before {
   bottom: 100%;
   left: 50%;
