Preliminary notes implementation

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -371,6 +371,12 @@ select {
 
 // FOOTER
 
+a.active-feature{
+  span {
+    color: @default-element-pressed;
+  }
+}
+
 a[class^='active-slide'],a[class*=' active-slide']{
   span {
     color: @highlighted-element;
