--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -35,3 +35,12 @@ a#accordionTitleLink {
 li.datepicker-date {
   line-height: @vertical-grid-half;
 }
+
+.teaser{
+  line-height: @vertical-grid-half;
+  font-size: @small-font-size;
+}
+
+.teaser, .teaser-empty{
+  padding-bottom: @vertical-grid-half;
+} 
