--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -10,6 +10,7 @@
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 @default-font-size: 18px; 
+@small-font-size: 15px; 
 @slide-indicator-width: 0.5em;
 
 // Columns
