Added archive list and edit list

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -444,3 +444,12 @@ span.icon-i:active, span.icon-plus:active {
   color: @danger-text;
   text-align: center;
 }
+
+// CONTENT
+
+.content {
+  color: @content;
+}
+a.content:active {
+  color: @content-pressed;
+}
