Fixed sign up logic

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -1,9 +1,9 @@
 
-// LOGIN
+// LOGIN / SIGNUP
 
 @login-content-height: @vertical-grid*5.1;
 
-section#login {
+section#login, section#signup {
   .column {
     overflow-y: auto;
     .banner {
