Date picker height fix.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -164,6 +164,10 @@ a#accordionTitleLink {
 }
 #datepicker {
   height: @datepicker-height;
+  overflow: hidden;
+  ul {
+    overflow: hidden;
+  }
   a {
     color: @highlighted-element;
   }
