Decorate selected date in date picker.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -162,6 +162,10 @@ a#accordionTitleLink {
   color: @content;
   line-height: 19px;
 }
+
+  .active {
+    border: solid;
+  }
 #datepicker {
   height: @datepicker-height;
   overflow: hidden;
