Active ng-class check with controller function.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -162,10 +162,6 @@ a#accordionTitleLink {
   color: @content;
   line-height: 19px;
 }
-
-  .active {
-    border: solid;
-  }
 #datepicker {
   height: @datepicker-height;
   overflow: hidden;
@@ -174,5 +170,8 @@ a#accordionTitleLink {
   }
   a {
     color: @highlighted-element;
+  }
+  span.activeDay {
+    border: solid;
   }
 }
