Highlight active day in date picker after swipe end.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -85,7 +85,7 @@ section#home {
       }
     }
     .content {
-      height:inherit;
+      height: inherit;
       padding-top: @vertical-grid / 2;
       padding-bottom: @footer-height + @vertical-grid / 4;
       #omnibar{
@@ -162,6 +162,7 @@ a#accordionTitleLink {
   color: @content;
   line-height: 19px;
 }
+
 #datepicker {
   height: @datepicker-height;
   overflow: hidden;
@@ -172,6 +173,7 @@ a#accordionTitleLink {
     color: @highlighted-element;
   }
   span.activeDay {
-    border: solid;
+    color: white;
+    background-color: @highlighted-element;
   }
 }
