Fixed click area bigger for datepicker and menu

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -133,12 +133,16 @@ footer {
   background-color: white;
   nav {
     padding-top: 5px;
-  }
-  li {
-    text-align: center;
-  }
-  .justified-element {
-    width: 30px;
+    ul {
+      li {
+        min-width: 50px;
+        text-align: center;
+        a {
+          width: 100%;
+          display: inline-block !important;
+        }
+      }
+    }
   }
 }
 
