--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -168,6 +168,14 @@ a#accordionTitleLink {
   overflow: hidden;
   ul {
     overflow: hidden;
+    li {
+      text-align: center;
+      min-width: 30px;
+      a {
+        display: inline-block;
+        width: 100%;
+      }
+    }
   }
   a {
     color: @highlighted-element;
