First set of changes

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -101,6 +101,20 @@
   transition: @fade-time linear;
 }
 
+// FORMS
+
+.form-group {
+  p.validation-error {
+    display: inline;
+    font-size: @small-font-size;
+    font-style: italic;
+    color: @warning;
+    line-height: @vertical-grid-half;
+    vertical-align: top;
+  }
+  
+}
+
 // INPUTS
 
 .simple-input {
