--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -43,6 +43,7 @@
 @icon: #999999;
 @separator: #dadada;
 @instruction: #70c041;
+@warning: #e22c09;
 
 @default-element: #919191;
 @default-element-pressed: darken(@default-element, 20%);
