New item utilizes the new offline queue

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -106,7 +106,7 @@
 .form-group {
   p.validation-error {
     display: inline;
-    font-size: @small-font-size;
+    font-size: @smallest-font-size;
     font-style: italic;
     color: @warning;
     line-height: @vertical-grid-half;
