--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -44,3 +44,10 @@ li.datepicker-date {
 .teaser, .teaser-empty{
   padding-bottom: @vertical-grid-half;
 } 
+
+
+.offline-indicator {
+  display:inline;
+  vertical-align: top;
+  font-size: @smallest-font-size;
+}
