--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -11,6 +11,7 @@
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 @default-font-size: 18px; 
 @small-font-size: 15px; 
+@smallest-font-size: 12px;
 @slide-indicator-width: 0.5em;
 
 // Columns
