--- a/frontend/core/src/main/webapp/static/less/idangerous.swiper.less
+++ b/frontend/core/src/main/webapp/static/less/idangerous.swiper.less
@@ -1,23 +1,20 @@
 /*
- * Swiper - Mobile Touch Slider CSS
- * http://www.idangero.us/sliders/swiper
+ * swiper 2.4.3
+ * Mobile touch slider and framework with hardware accelerated transitions
  *
- * Vladimir Kharlampidi, The iDangero.us
- * http://www.idangero.us/
- * 
- * Copyright 2012-2013, Vladimir Kharlampidi
+ * http://www.idangero.us/sliders/swiper/
+ *
+ * Copyright 2010-2014, Vladimir Kharlampidi
  * The iDangero.us
- * http://www.idangero.us
+ * http://www.idangero.us/
  *
  * Licensed under GPL & MIT
  *
+ * Released on: January 29, 2014
 */
-
-/* ===============================================================
-Basic Swiper Styles 
-================================================================*/
 .swiper-container {
 	margin:0 auto;
+	position:relative;
 	overflow:hidden;
 	-webkit-backface-visibility:hidden;
 	-moz-backface-visibility:hidden;
@@ -55,6 +52,10 @@ Basic Swiper Styles
 	transition-duration:0s;
 	transform:translate3d(0px,0,0);
 	transition-timing-function:ease;
+
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
 }
 .swiper-free-mode > .swiper-wrapper {
 	-webkit-transition-timing-function: ease-out;
@@ -85,14 +86,12 @@ sizes, pagination, etc.
 
 	/*width:200px;
 	height: 100px;*/
-	width: 100%;
-	height: 100%;
 }
 .swiper-slide {
 	/* Specify Slides's Size: */
 	
-	// width: 100%;
-	// height: 100%;
+	/*width: 100%;
+	height: 100%;*/
 }
 .swiper-slide-active {
 	/* Specific active slide styling: */
