Renamed idangerous.swiper.less to swiper.less. Removed 'position: relative' from .swiper-container.

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -3,7 +3,7 @@
 @import "main.less";
 @import "common.less";
 @import "icon.less";
-@import "idangerous.swiper.less";
+@import "swiper.less";
 @import "grid.less";
 @import "components.less";
 @import "pages.less";
