Re-added accordion-wrapper class to inbox.html to not brake fix https://github.com/extendedmind/extendedmind/commit/82f66c4b7ba0f0b2fcbd62de11304780beda8e30. Fix inbox scroll with height: inherit in accordion-wrapper.

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -94,6 +94,9 @@ header {
   height: inherit;
   padding-top: @page-header-height;
   padding-bottom: @footer-height;
+  .accordion-wrapper {
+    height: inherit;
+  }
   .inner-page-content-container {
     height: inherit;
     position: relative;
