Fix scroll not working on fullscreen desktop: set min-height and max-height instead of height once the screen size is bigger than a tablet.

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -176,7 +176,8 @@ footer {
     div[role=main] > div.slides-container {
       position: inherit;
       top: 50%;
-      height: @maximum-landscape-height;
+      min-height: @maximum-landscape-height;
+      max-height: @maximum-landscape-height;
       margin-top: -@maximum-landscape-height / 2;
     }
   }
