--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -4,6 +4,7 @@
   position: relative;
 }
 
+// http://coding.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
 .absolute-center {
   width: 50%;
   height: 50%;
