Launch page. Cleaned MockAuthBackendService.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -1,9 +1,9 @@
 
-// LOGIN / SIGNUP
+// LOGIN / SIGNUP / LAUNCH
 
 @login-content-height: @vertical-grid*5.1;
 
-section#login, section#signup {
+section#login, section#signup, section#launch {
   .column {
     overflow-y: auto;
     .banner {
