--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -3,7 +3,7 @@
 
 @login-content-height: @vertical-grid*5.1;
 
-section#login, section#signup, section#launch {
+section#login, section#signup, section#launch, section#waiting {
   .column {
     overflow-y: auto;
     .banner {
@@ -29,6 +29,20 @@ section#login, section#signup, section#launch {
       .button-container{
         padding-top: @vertical-grid / 2;
         padding-bottom: @vertical-grid / 2;
+      }
+    }
+  }
+}
+
+section#waiting {
+  .content {
+    .waiting-text {
+      color: @instruction;
+      display: block;
+      text-align: center;
+      line-height: 19px;
+      h1 {
+        line-height: 200%;
       }
     }
   }
@@ -73,7 +87,7 @@ section#home {
   }
 
   #main-content-container {
-    height:100%;
+    height: 100%;
     .banner {
       padding-top: @vertical-grid * 1.5;
       padding-bottom: @vertical-grid / 2;
